infer/tests/codetoanalyze/objc/errors/memory_leaks_benchmark/RetainReleaseExample.dot
/* @generated */
digraph iCFG {
8 [label="8:  DeclStmt \n   n$3=_fun___objc_alloc_no_fail(sizeof(class RRA ):unsigned long ) [line 25]\n  n$4=_fun_RRA_init(n$3:class RRA *) virtual [line 25]\n  *&a:class RRA *=n$4 [line 25]\n " shape="box"]
	

	 8 -> 7 ;
7 [label="7:  Message Call: retain \n   n$1=*&a:class RRA * [line 26]\n  n$2=_fun___objc_retain(n$1:class RRA *) [line 26]\n " shape="box"]
	

	 7 -> 6 ;
6 [label="6:  Message Call: release \n   n$0=*&a:class RRA * [line 27]\n  _fun___objc_release(n$0:class RRA *) [line 27]\n " shape="box"]
	

	 6 -> 5 ;
5 [label="5: Exit retain_release_test \n  " color=yellow style=filled]
	

4 [label="4: Start retain_release_test\nFormals: \nLocals:  a:class RRA * \n   DECLARE_LOCALS(&return,&a); [line 24]\n " color=yellow style=filled]
	

	 4 -> 8 ;
3 [label="3:  Return Stmt \n   n$0=*&self:class RRA * [line 19]\n  *&return:struct objc_object *=n$0 [line 19]\n " shape="box"]
	

	 3 -> 2 ;
2 [label="2: Exit RRA_init \n  " color=yellow style=filled]
	

1 [label="1: Start RRA_init\nFormals:  self:class RRA *\nLocals:  \n   DECLARE_LOCALS(&return); [line 18]\n " color=yellow style=filled]
	

	 1 -> 3 ;
}
